[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Switch.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/med_grey.tres" type="Material" id=2]
[ext_resource path="res://assets/textures/dark_grey.tres" type="Material" id=3]
[ext_resource path="res://scripts/ShootableButton.gd" type="Script" id=4]

[sub_resource type="CubeMesh" id=1]
material = ExtResource( 3 )
size = Vector3( 0.25, 1, 2 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.2, 0.607843, 0.247059, 1 )
emission_enabled = true
emission = Color( 0.341176, 0.67451, 0.388235, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 0.45, 1, 2 )

[sub_resource type="CubeMesh" id=4]
material = ExtResource( 3 )
size = Vector3( 0.45, 1, 2 )

[sub_resource type="CubeMesh" id=5]
material = ExtResource( 2 )
size = Vector3( 2, 0.5, 2.5 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1.20107, 0.654314, 1.398 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1, 0.474105, 1.25162 )

[node name="Switch" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, 0 )
mesh = SubResource( 1 )

[node name="OnPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )

[node name="OffPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.403101, 0 )

[node name="MovingPart" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
mesh = SubResource( 3 )

[node name="MeshInstance5" type="MeshInstance" parent="."]
transform = Transform( 1.07792, 0, 0, 0, 1, 0, 0, 0, 1.07792, 0, 0.5, 0 )
mesh = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0 )
mesh = SubResource( 1 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
mesh = SubResource( 5 )

[node name="ShootableBit" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.536218, 0 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="ShootableBit"]
shape = SubResource( 6 )

[node name="ShootableBit2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.536218, 0 )
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="ShootableBit2"]
shape = SubResource( 7 )

[connection signal="hit" from="ShootableBit" to="." method="_on_ShootableBit_hit"]
